Change background to fix flickering.

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 
 #myVideo2 {
   position: absolute;
+  background-color: black;
   right: 0;
   bottom: 0;
   left: 0;
